fe/kubernetes/default_configs/sitefe-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: sitefe-___REPLACEMENODOTS___
spec:
  selector:
    run: sitefe-___REPLACEME___
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 80
  - name: https
    protocol: TCP
    port: 8443
    targetPort: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: sitefe-___REPLACEME___
  name: sitefe-___REPLACEME___
spec:
  replicas: 1
  selector:
    matchLabels:
      run: sitefe-___REPLACEME___
  strategy: {}
  template:
    metadata:
      labels:
        run: sitefe-___REPLACEME___
    spec:
      containers:
      - image: sdnsense/site-rm-sense:dev
        imagePullPolicy: "Always"
        name: sitefe
        resources:
          requests:
            memory: "2G"
            cpu: "1"
          limits:
            memory: "4G"
            cpu: "1"
        ports:
        - containerPort: 80
        - containerPort: 443
        - containerPort: 8080
        - containerPort: 8443
        volumeMounts:
        - mountPath: /opt/siterm/
          name: sense-fe-vol-___REPLACEMENODOTS___
        - mountPath: /etc/siterm.yaml
          name: fe-conf
          subPath: sense-siterm-fe.yaml
        - mountPath: /etc/siterm-mariadb
          name: fe-environment
          readOnly: true
          subPath: environment.conf
        - mountPath: /etc/grid-security/hostcert.pem
          name: fe-hostcert
          readOnly: true
          subPath: hostcert.pem
        - mountPath: /etc/grid-security/hostkey.pem
          name: fe-hostkey
          readOnly: true
          subPath: hostkey.pem
        - mountPath: /etc/httpd/certs/cert.pem
          name: fe-httpdcert
          readOnly: true
          subPath: httpdcert.pem
        - mountPath: /etc/httpd/certs/privkey.pem
          name: fe-httpdprivkey
          readOnly: true
          subPath: httpdprivkey.pem
        - mountPath: /etc/httpd/certs/fullchain.pem
          name: fe-httpdfullchain
          readOnly: true
          subPath: httpdfullchain.pem
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - configMap:
          defaultMode: 0644
          items:
          - key: sense-siterm-fe
            path: sense-siterm-fe.yaml
          name: sense-fe-___REPLACEME___
        name: fe-conf
      - name: fe-environment
        secret:
          secretName: sense-fe-___REPLACEME___
          items:
          - key: fe-environment
            path: environment.conf
          defaultMode: 0644
      - name: fe-httpdcert
        secret:
          secretName: sense-fe-___REPLACEME___
          items:
          - key: fe-httpdcert
            path: httpdcert.pem
          defaultMode: 0644
      - name: fe-httpdprivkey
        secret:
          secretName: sense-fe-___REPLACEME___
          items:
          - key: fe-httpdprivkey
            path: httpdprivkey.pem
          defaultMode: 0644
      - name: fe-httpdfullchain
        secret:
          secretName: sense-fe-___REPLACEME___
          items:
          - key: fe-httpdfullchain
            path: httpdfullchain.pem
          defaultMode: 0644
      - name: fe-hostcert
        secret:
          secretName: sense-fe-___REPLACEME___
          items:
          - key: fe-hostcert
            path: hostcert.pem
          defaultMode: 0644
      - name: fe-hostkey
        secret:
          secretName: sense-fe-___REPLACEME___
          items:
          - key: fe-hostkey
            path: hostkey.pem
          defaultMode: 0644
      - name: sense-fe-vol-___REPLACEMENODOTS___
        persistentVolumeClaim:
          claimName: sense-fe-vol-___REPLACEMENODOTS___
status: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: sense-fe-ingress-___REPLACEMENODOTS___
    namespace: ___REPLACEMENAMESPACE___
    annotations:
      kubernetes.io/ingress.class: haproxy
      kubernetes.io/ssl-passthrough: "true"
spec:
    rules:
    - host: "___REPLACEME___"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sitefe-___REPLACEMENODOTS___
              port:
                number: 8443
